--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "author": "Stepan Anokhin",
     "license": "ISC",
     "devDependencies": {
+        "@actions/core": "^1.10.0",
         "lerna": "^6.0.1",
+        "prettier": "^2.7.1",
         "semver": "^7.3.8"
     },
     "scripts": {
