--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   publish_prerelease:
+    name: "Pre-release packages"
     runs-on: ubuntu-latest
     outputs:
       test-a: ${{ steps.changes.outputs.a }}
@@ -61,38 +62,65 @@ jobs:
             core.setOutput('c', changes.includes('packages/c/package.json'));
             core.setOutput('parent', changes.includes('packages/parent/package.json'));
   test-a:
+    name: "Test Library A"
     runs-on: ubuntu-latest
     needs: publish_prerelease
+    if: needs.publish_prerelease.outputs.test-a == 'true'
     steps:
-      - name: Functional Test A
-        if: needs.publish_prerelease.outputs.a == 'true'
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: "Run Tests"
         run: |
-          echo "TESTS ON LIBRARY A"
+          npm ci
+          npx lerna bootstrap -- --force-local
+          cd packages/a
+          npm run test
+
   test-b:
+    name: "Test Library B"
     runs-on: ubuntu-latest
     needs: publish_prerelease
+    if: needs.publish_prerelease.outputs.test-b == 'true'
     steps:
-      - name: Functional Test B
-        if: needs.publish_prerelease.outputs.b == 'true'
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: "Run Tests"
         run: |
-          echo "TESTS ON LIBRARY B"
+          npm ci
+          npx lerna bootstrap -- --force-local
+          cd packages/b
+          npm run test
   test-c:
+    name: "Test Library C"
     runs-on: ubuntu-latest
     needs: publish_prerelease
+    if: needs.publish_prerelease.outputs.test-c == 'true'
     steps:
-      - name: Functional Test C
-        if: needs.publish_prerelease.outputs.c == 'true'
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: "Run Tests"
         run: |
-          echo "TESTS ON LIBRARY C"
+          npm ci
+          npx lerna bootstrap -- --force-local
+          cd packages/c
+          npm run test
   test-parent:
+    name: "Test Parent"
     runs-on: ubuntu-latest
     needs: publish_prerelease
+    if: needs.publish_prerelease.outputs.test-parent == 'true'
     steps:
       - name: Functional Test Parent
-        if: needs.publish_prerelease.outputs.parent == 'true'
         run: |
           echo "TESTS ON LIBRARY PARENT"
   confirm-merged-into-staging:
+    name: "Confirm Test Results"
     runs-on: ubuntu-latest
     needs: [test-a, test-b, test-c, test-parent]
     steps:
