--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -128,5 +128,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-a, test-b, test-c, test-parent]
     steps:
-      - name: Success
-        run: echo SUCCESS
+      - name: Check Test Results
+        uses: actions/github-script@v6
+        with:
+          script: console.log(JSON.stringify(context, null, 2));
