--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   publish_prerelease:
-    name: "Pre-release packages"
+    name: "Publish 'next' version"
     runs-on: ubuntu-latest
     outputs:
       test-a: ${{ steps.changes.outputs.a }}
@@ -132,4 +132,11 @@ jobs:
       - name: Check Test Results
         uses: actions/github-script@v6
         with:
-          script: console.log(JSON.stringify(context, null, 2));
+          script: |
+            const statuses = [
+              core.getInput('needs.test-a.status'),
+              core.getInput('needs.test-b.status'),
+              core.getInput('needs.test-c.status'),
+              core.getInput('needs.test-d.status'),
+            ];
+            console.log(JSON.stringify(statuses, null, 2));
