--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -67,6 +67,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish_prerelease
     if: needs.publish_prerelease.outputs.test-a == 'true'
+    outputs:
+      status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -84,6 +86,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish_prerelease
     if: needs.publish_prerelease.outputs.test-b == 'true'
+    outputs:
+      status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -101,6 +105,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish_prerelease
     if: needs.publish_prerelease.outputs.test-c == 'true'
+    outputs:
+      status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -118,6 +124,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish_prerelease
     if: needs.publish_prerelease.outputs.test-parent == 'true'
+    outputs:
+      status: ${{ job.status }}
     steps:
       - name: Functional Test Parent
         run: |
@@ -133,10 +141,10 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            console.log("${{needs.test-a.status}}");
-            console.log("${{needs.test-b.status}}");
-            console.log("${{needs.test-c.status}}");
-            console.log("${{needs.test-parent.status}}");
+            console.log("${{needs.test-a.outputs.status}}");
+            console.log("${{needs.test-b.outputs.status}}");
+            console.log("${{needs.test-c.outputs.status}}");
+            console.log("${{needs.test-parent.outputs.status}}");
             const statuses = [
               core.getInput('needs.test-a.status'),
               core.getInput('needs.test-b.status'),
