--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -100,10 +100,37 @@ jobs:
           cd packages/b
           npm run test
 
+  checkpoint-1:
+    name: "Check Point 1"
+    runs-on: ubuntu-latest
+    needs:
+      - test-a
+      - test-b
+    if: ${{ always() }}
+    outputs:
+      status: ${{ job.status }}
+    steps:
+      - name: Check Test Results
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const statuses = {
+              "a": "${{needs.test-a.outputs.status}}",
+              "b": "${{needs.test-b.outputs.status}}",
+            };
+            console.log("Collected Test Results:");
+            console.log(JSON.stringify(statuses, null, 2));
+
+            if(Object.values(statuses).some(status => status === "failure")) {
+              core.setFailed("Some tests failed.");
+            }
+
   test-c:
     name: "Test Library C"
     runs-on: ubuntu-latest
-    needs: publish_prerelease
+    needs:
+      - checkpoint-1
+      - publish_prerelease
     if: needs.publish_prerelease.outputs.test-c == 'true'
     outputs:
       status: ${{ job.status }}
@@ -119,10 +146,37 @@ jobs:
           cd packages/c
           npm run test
 
+  checkpoint-2:
+    name: "Check Point 2"
+    runs-on: ubuntu-latest
+    needs:
+      - checkpoint-1
+      - test-c
+    if: ${{ always() }}
+    outputs:
+      status: ${{ job.status }}
+    steps:
+      - name: Check Test Results
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const statuses = {
+              "Check Point 1": "${{needs.checkpoint-1.outputs.status}}",
+              "c": "${{needs.test-c.outputs.status}}",
+            };
+            console.log("Collected Test Results:");
+            console.log(JSON.stringify(statuses, null, 2));
+
+            if(Object.values(statuses).some(status => status === "failure")) {
+              core.setFailed("Some MABL tests failed.");
+            }
+
   test-parent:
     name: "Test Parent"
     runs-on: ubuntu-latest
-    needs: publish_prerelease
+    needs:
+      - checkpoint-2
+      - publish_prerelease
     if: needs.publish_prerelease.outputs.test-parent == 'true'
     outputs:
       status: ${{ job.status }}
@@ -134,7 +188,9 @@ jobs:
   confirm-merged-into-staging:
     name: "Confirm Test Results"
     runs-on: ubuntu-latest
-    needs: [test-a, test-b, test-c, test-parent]
+    needs:
+      - test-parent
+      - checkpoint-2
     if: ${{ always() }}
     steps:
       - name: Check Test Results
@@ -142,9 +198,7 @@ jobs:
         with:
           script: |
             const statuses = {
-              "a": "${{needs.test-a.outputs.status}}",
-              "b": "${{needs.test-b.outputs.status}}",
-              "c": "${{needs.test-c.outputs.status}}",
+              "Check Point 1": "${{needs.checkpoint-2.outputs.status}}",
               "parent": "${{needs.test-parent.outputs.status}}",
             };
             console.log(JSON.stringify(statuses, null, 2));
