--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -135,6 +135,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-1
+    if: always() && needs.checkpoint-1.outputs.test-c == 'true'
     outputs:
       status: ${{ job.status }}
     steps:
@@ -181,7 +182,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-2
-    if: needs.checkpoint-2.outputs.test-parent == 'true'
+    if: always() && needs.checkpoint-2.outputs.test-parent == 'true'
     outputs:
       status: ${{ job.status }}
     steps:
