Fix staging release

--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -135,15 +135,17 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-1
-    if: always() && needs.checkpoint-1.outputs.test-c == 'true'
+    if: always()
     outputs:
       status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
+        if: needs.checkpoint-1.outputs.test-c == 'true'
         with:
           fetch-depth: 0
       - name: "Run Tests"
+        if: needs.checkpoint-1.outputs.test-c == 'true'
         run: |
           echo $${{ needs.checkpoint-1.outputs.test-c }} ${{ needs.checkpoint-1.outputs.test-c == 'true' }}
           npm ci
@@ -182,15 +184,17 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-2
-    if: always() && needs.checkpoint-2.outputs.test-parent == 'true'
+    if: always()
     outputs:
       status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
+        if: needs.checkpoint-2.outputs.test-parent == 'true'
         with:
           fetch-depth: 0
       - name: "Run Tests"
+        if: needs.checkpoint-2.outputs.test-parent == 'true'
         run: |
           npm ci
           npx lerna bootstrap -- --force-local
