--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -55,7 +55,7 @@ jobs:
             // Get changed paths
             const execSync = require('child_process').execSync;
             const changes = execSync('git diff --name-only origin/master', {encoding: 'utf-8'}).split('\n')
-            
+
             console.log(JSON.stringify(changes, null, 2));
 
             // Set output flags
@@ -135,17 +135,15 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-1
-    if: always()
+    if: always() && needs.checkpoint-1.outputs.test-c == 'true'
     outputs:
       status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
-        if: needs.checkpoint-1.outputs.test-c == 'true'
         with:
           fetch-depth: 0
       - name: "Run Tests"
-        if: needs.checkpoint-1.outputs.test-c == 'true'
         run: |
           echo $${{ needs.checkpoint-1.outputs.test-c }} ${{ needs.checkpoint-1.outputs.test-c == 'true' }}
           npm ci
@@ -184,17 +182,15 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - checkpoint-2
-    if: always()
+    if: always() && needs.checkpoint-2.outputs.test-parent == 'true'
     outputs:
       status: ${{ job.status }}
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
-        if: needs.checkpoint-2.outputs.test-parent == 'true'
         with:
           fetch-depth: 0
       - name: "Run Tests"
-        if: needs.checkpoint-2.outputs.test-parent == 'true'
         run: |
           npm ci
           npx lerna bootstrap -- --force-local
