--- a/.github/workflows/sanity_check.yaml
+++ b/.github/workflows/sanity_check.yaml
@@ -14,17 +14,8 @@ jobs:
       test-b: ${{ steps.changes.outputs.b }}
       test-c: ${{ steps.changes.outputs.c }}
       test-parent: ${{ steps.changes.outputs.parent }}
+      status: ${{ job.status }}
     steps:
-      - name: "Check Merged into Staging"
-        uses: actions/github-script@v6
-        if: github.event.pull_request.merged == false
-        with:
-          # See actions/github-script@v6: https://github.com/actions/github-script#actionsgithub-script
-          # See compareCommitsWithBasehead: https://octokit.github.io/rest.js/v19#repos-compare-commits-with-basehead
-          # See @actions/core: https://github.com/actions/toolkit/tree/main/packages/core#exit-codes
-          script: |
-            core.setFailed("Feature-branch must be merged into 'staging' before merging into 'master'.");
-
       - name: "Checkout"
         uses: actions/checkout@v2
         with:
@@ -201,9 +192,10 @@ jobs:
     name: "Confirm Test Results"
     runs-on: ubuntu-latest
     needs:
+      - publish_prerelease
       - test-parent
       - checkpoint-2
-    if: ${{ always() }}
+    if: always() && needs.publish_prerelease.outputs.status == 'success'
     steps:
       - name: Check Test Results
         uses: actions/github-script@v6
