--- a/.github/workflows/suggest.yaml
+++ b/.github/workflows/suggest.yaml
@@ -1,46 +1,53 @@
-name: Suggest
+name: Release Flow
 on:
   pull_request:
-    types: [ opened ]
+    types: [opened]
     branches:
       - master
 
 jobs:
-  suggest-pr-actions:
+  suggest-staging-pr:
+    name: "Suggest"
     runs-on: ubuntu-latest
     steps:
       - name: Suggest Merge into Staging
         uses: actions/github-script@v6
         with:
           script: |
-            console.log(JSON.stringify(context, null, 2));
+            // Get PR details
+            const thisPull = context.payload.pull_request;
+            const thisHead = thisPull.head;
+            const featureBranch = thisHead.ref;
+            const repo = context.payload.repository.name;
+            const owner = context.payload.repository.owner.login;
             
-            // Compare feature-branch with staging
-            const featureBranch = context.payload.pull_request.head.ref;
-            const comparison = await github.rest.repos.compareCommitsWithBasehead({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              basehead: `staging...${featureBranch}`,
-            });
-            const status = comparison.data.status;
-            
-            const pullsToStaging = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: "open",
+            // Get pulls this-feature-branch -> staging:
+            const { data: stagingPulls = [] } = await octokit.rest.pulls.list({
+              owner,
+              repo,
+              state: "all",
               base: "staging",
               head: featureBranch,
+              sort: "created",
+              per_page: 100,
             });
             
+            // Check if PR to staging already exists or already merged
+            const stagingPullExists = stagingPulls.some(
+              (pull) =>
+                pull.head.sha === thisHead.sha &&
+                (pull.state === "open" || pull.merged_at != null)
+            );
+            
             // Make suggestion
-            if(status !== "behind" && pullsToStaging.data.length === 0) {
-              const pullRequestURL = `https://github.com/${context.repo.owner}/${context.repo.repo}/pull/new/staging...${featureBranch}`;
-              const suggestion = `### Suggestion\n\nCreate a pull request for \`${featureBranch}\` -> \`staging\` by visiting this link:  [Create Pull Request](${pullRequestURL}).`
-              
+            if (!stagingPullExists) {
+              const pullRequestURL = `https://github.com/${owner}/${repo}/pull/new/staging...${featureBranch}`;
+              const suggestionText = `### Suggestion\n\nYou may want to create a pull request for \`${featureBranch}\` -> \`staging\` by visiting this link:  [Create Pull Request](${pullRequestURL}).`;
+            
               await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.payload.pull_request.number,
-                body: suggestion,
+                owner,
+                repo,
+                issue_number: thisPull.number,
+                body: suggestionText,
               });
             }
