Fix aws workflow

--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -17,3 +17,4 @@ jobs:
           which docker
           docker image ls --all
           docker tag node:14 my-node:latest
+          docker image ls --all
