--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -13,6 +13,7 @@ jobs:
           which aws
           aws s3 help | cat
       - name: Test Docker
+        if: github.ref == 'refs/heads/master'
         run: |
           which docker
           docker image ls --all
