Fix aws workflow

--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -19,3 +19,4 @@ jobs:
           docker image ls --all
           docker tag node:14 my-node:latest
           docker image ls --all
+          echo ${{github.ref_name}}
