--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -8,6 +8,10 @@ jobs:
   test-aws:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
+
       - name: Set up Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
