--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -20,6 +20,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          load: true
           context: .
           file: ./Dockerfile
           tags: |
