--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -26,6 +26,15 @@ jobs:
           tags: |
             ghcr.io/stepan/${{ github.event.repository.name }}-${{ github.ref_name }}:latest
 
+      - name: Build and push docker image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: |
+            ghcr.io/stepan/${{ github.event.repository.name }}-${{ github.ref_name }}:latest
+
       - name: Publish On-Premise Crawler
         if: github.ref_name == 'master'
         run: |
