--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -16,7 +16,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push docker image
+      - name: Build docker image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -26,8 +26,7 @@ jobs:
           tags: |
             ghcr.io/stepan/${{ github.event.repository.name }}-${{ github.ref_name }}:latest
 
-      - name: Build and push docker image
-        id: docker_build
+      - name: Build docker image - 2
         uses: docker/build-push-action@v2
         with:
           context: .
