--- a/.github/workflows/publish-master-pr.yaml
+++ b/.github/workflows/publish-master-pr.yaml
@@ -20,3 +20,5 @@ jobs:
           echo "github.head_ref = ${{ github.head_ref }}"
           echo "github.base_ref = ${{ github.base_ref }}"
           echo "github.sha = ${{ github.sha }}"
+          git rev-list -n 1 "${{ github.head_ref }}"
+          git rev-list -n 1 "${{ github.base_ref }}"
