--- a/.github/workflows/publish-master-pr.yaml
+++ b/.github/workflows/publish-master-pr.yaml
@@ -11,6 +11,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Publish
         run: |
           echo "github.ref = ${{ github.ref }}"
