--- a/.github/workflows/publish-master-pr.yaml
+++ b/.github/workflows/publish-master-pr.yaml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish
         run: |
+          git fetch origin
           echo "github.ref = ${{ github.ref }}"
           echo "github.ref_name = ${{ github.ref_name }}"
           echo "github.ref_protected = ${{ github.ref_protected }}"
