--- a/.github/workflows/publish-master-pr.yaml
+++ b/.github/workflows/publish-master-pr.yaml
@@ -14,7 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish
         run: |
-          git fetch origin
           echo "github.ref = ${{ github.ref }}"
           echo "github.ref_name = ${{ github.ref_name }}"
           echo "github.ref_protected = ${{ github.ref_protected }}"
@@ -22,5 +21,5 @@ jobs:
           echo "github.head_ref = ${{ github.head_ref }}"
           echo "github.base_ref = ${{ github.base_ref }}"
           echo "github.sha = ${{ github.sha }}"
-          git rev-list -n 1 "${{ github.head_ref }}"
-          git rev-list -n 1 "${{ github.base_ref }}"
+          git rev-list -n 1 "origin/${{ github.head_ref }}"
+          git rev-list -n 1 "origin/${{ github.base_ref }}"
