--- a/.github/workflows/publish-master-pr.yaml
+++ b/.github/workflows/publish-master-pr.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish
         run: |
-          git fetch origin
+          git fetch origin > /dev/null
           echo "github.ref = ${{ github.ref }}"
           echo "github.ref_name = ${{ github.ref_name }}"
           echo "github.ref_protected = ${{ github.ref_protected }}"
@@ -24,3 +24,4 @@ jobs:
           echo "github.sha = ${{ github.sha }}"
           git rev-list -n 1 "origin/${{ github.head_ref }}"
           git rev-list -n 1 "origin/${{ github.base_ref }}"
+          echo "hello"
